@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-05T01:02:09Z",
-  "count_outdated" : 123,
-  "uniques_outdated" : 105,
+  "timestamp" : "2025-12-07T01:07:41Z",
+  "count_outdated" : 124,
+  "uniques_outdated" : 106,
   "count" : 125,
   "uniques" : 107,
   "clones" : [
-    {
-      "timestamp": "2025-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-04T00:00:00Z",
       "count": 1,
