@@ -1,3 +1,12 @@
+2025-12-07T01:07:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/19996830171 # 831
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-07
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 105 123 / 107 125
+* notice: next accum: outdated-unq outdated-all / unq all: 106 124 / 107 125
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-22] / []
+
 2025-12-05T01:02:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/19949098604 # 829
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
